{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "UI",
            "id": "74ef6ad2-f19e-4ad3-9564-54b87e25fa33",
            "actions": [
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "ed34dc9c-7c4b-4d4c-bed8-7b3e1014c6e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "84644297-07d1-4f93-b43c-c15d9e2ce7c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d44fc11b-515f-4c91-a6f1-d9b94882aef6",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8129f5d9-ee19-4eee-8ce3-1da730fe192e",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}